# farm-faux-cloud

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  start.sh  supervisord.conf  tenet_dockerfile
app/: app.py
