[tool.poetry]
name = "farm-faux-cloud"
version = "0.1.0"
description = ""
authors = ["Symbioquine <symbioquine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
docker = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
